--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "upinion/propel",
+    "name": "upinion/propel2",
     "type": "library",
     "description": "Propel2 is an open-source Object-Relational Mapping (ORM) for PHP 5.5 and up.",
     "keywords": [
